--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="img/favicon-32x32.png">
     <link rel="stylesheet" href="style.css">
-    <title>Expanding Cards</title>
+    <title>Sign up Form</title>
   </head>
   <body>
    
