Revert "index > terms link now opens in a new tab"
This reverts commit 90ee881a77842bd82245caf8879b81174544e2cc.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <input type="password" placeholder="Password" name="password" id="password" required>
           <span class="error-message hidden">Password cannot be empty</span>
           <button class="btn-block green" type="submit" id="submit">CLAIM YOUR FREE TRIAL</button>
-          <small>By clicking the button, you are agreeing to our <a href="#" target="_blank" class="terms">terms and services</a></small>
+          <small>By clicking the button, you are agreeing to our <a href="#" class="terms">terms and services</a></small>
         </form>
       </section>
     </main>
